[package]
name = "character-sheet"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["http2"] }
axum-login = "0.18.0"
regex = "1.12.3"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = { version = "0.15.0", features = ["memory-store"] }
tower-sessions-file-store = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yaml_serde = "0.10.4"
